--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -20,3 +20,31 @@ body{
     font-weight: 400;
     color: var(--colors-text-light);
 }
+
+.container{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.container .logo{
+    height: 150px;
+}
+
+.container form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container form #fmessage{
+    width: 400px;
+    height: 400px;
+}
+
