--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,13 +5,11 @@
     --colors-text-highlight: #4c4c4c;
     --colors-text-dark: #000;
     --fonts-normal-text: arial, verdana;
+
     --mdc-theme-primary: #07f2b0 !important;
     --mdc-theme-on-primary: #ffffff !important;
-    --mdc-theme-secondary: #06BFBF !important;
-    --mdc-theme-on-secondary: #ffffff !important;
-    --mdc-theme-surface: #07f2b0 !important;
-    --mdc-theme-on-surface: #ffffff !important;
-    --mdc-theme-background: #2f2f2f !important;
+    --mdc-theme-surface: #06bfbf !important;
+    --mdc-theme-on-surface: #000000 !important;
 }
 
 ::selection{
@@ -97,3 +95,6 @@ footer{
     text-align: center;
 }
 
+.mdc-text-field .mdc-text-field__input{
+    caret-color: #07f2b0 !important;
+}
