--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -58,12 +58,12 @@ body{
     align-items: center;
 }
 
-.container form #fmessage{
-    width: 400px;
-    height: 400px;
-}
+/*.container form #fmessage{*/
+/*    width: 400px;*/
+/*    height: 400px;*/
+/*}*/
 
-.message-field{
+.messageForm{
     width: 300px;
     margin: 20px 0;
     background-color: white;
@@ -71,13 +71,8 @@ body{
     color: var(--mdc-theme-primary);
 }
 
-.send-button{
+.messageForm{
     display: block;
-}
-
-.social-icons{
-    display: flex;
-    justify-content: center;
 }
 
 footer{
