--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -58,11 +58,6 @@ body {
   align-items: center;
 }
 
-/*.container form #fmessage{*/
-/*    width: 400px;*/
-/*    height: 400px;*/
-/*}*/
-
 .messageForm {
   width: 300px;
   margin: 20px 0;
@@ -80,6 +75,7 @@ footer {
   justify-content: center;
   font-family: Montserrat;
   font-size: 10px;
+  height: 5%;
 
   position: fixed;
   left: 0;
@@ -92,4 +88,11 @@ footer {
 
 .mdc-text-field .mdc-text-field__input {
   caret-color: #07f2b0 !important;
+}
+
+.taskbar-icons{
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  flex-direction: row;
 }
