--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -137,7 +137,18 @@ footer {
   flex-direction: row;
 }
 
-/*Profile styling*/
+/*Profile screen*/
+.profile-container{
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+}
 
 .gradient{
   background: linear-gradient(180deg, var(--mdc-theme-primary) 0%, var(--mdc-theme-surface) 80%);
@@ -323,4 +334,60 @@ h2{
 
 .settings-btn span{
   font-size: 2em;
+}
+
+/*Settings screen*/
+.title h1{
+  font-family: Montserrat-Bold, sans-serif;
+  font-size: 32px;
+  text-align: center;
+  color: var(--colors-text-light);
+  position: absolute;
+  top: 3rem;
+  left: 2rem;
+}
+
+.settings-container{
+  height: 90vh;
+  text-align: center;
+  margin: 18vh 25px 0 25px;
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+}
+
+.setting{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.subtitle h2{
+  font-family: Montserrat Regular, sans-serif;
+  font-size: 12px;
+  text-align: center;
+  color: #b3b3b3;
+  height: 2vh;
+  margin: 0;
+}
+
+.settings-title{
+  font-family: Montserrat Regular, sans-serif;
+  font-size: 12px;
+  text-align: center;
+  color: var(--colors-text-light);
+}
+
+.setting .icon{
+  margin: 10px;
+}
+
+.line{
+  width: 352px;
+  height: 0;
+  border: 1px solid rgba(102, 106, 112, 0.1);
+}
+
+.subtitle{
+  margin: 2vh 0 1vh 0;
 }
