--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -250,9 +250,9 @@ footer {
   margin-bottom: 5vh;
 }
 
-.cardcontainer {
-  /* padding-top: 20px; */
-}
+/* .cardcontainer {
+  /* padding-top: 20px; 
+} */
 
 .card {
   display: grid;
@@ -778,4 +778,121 @@ input[type="time"]::-webkit-calendar-picker-indicator {
   display: flex;
   justify-content: center;
   text-align: center;
+}
+
+/*chat page*/
+.chat-title {
+  width: 100%;
+  display: flex;
+  text-align: left;
+}
+
+.chat-title > h1 {
+  font-weight: 700;
+  font-size: 36px;
+  margin: 94px 0 26px 26px;
+}
+
+.person {
+  width: 100%;
+  height: 75px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+/*chat section*/
+.profilePicture {
+  width: 50px;
+  height: 50px;
+  margin: 0 26px 0 26px;
+}
+
+.name-container {
+  height: 100%;
+  width: 100%;
+  border-bottom: 1px solid rgba(102, 106, 112, 0.1);
+  display: flex;
+  align-items: center;
+}
+
+.person-container {
+  overflow: auto;
+  height: 100vh;
+  white-space: nowrap;
+}
+
+.name h2 {
+  margin: 0;
+  text-align: left;
+  font-weight: 700;
+  font-size: 16px;
+  color: var(--mdc-theme-primary);
+}
+
+.name p {
+  margin: 0;
+  text-align: left;
+  font-weight: 400;
+  font-size: 12px;
+}
+
+.timeStamp {
+  position: absolute;
+  right: 20px;
+}
+
+/* End chat section*/
+
+/* Drawing section */
+.doodle-title {
+  width: 100%;
+  display: flex;
+  text-align: left;
+}
+
+.doodle-title>h1 {
+  font-weight: 700;
+  font-size: 36px;
+  margin: 94px 0 26px 26px;
+}
+
+.drawing-container {
+  width: 100%;
+  height: 520px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#can {
+  width: 322px;
+  height: 507px;
+  /* border: 1px solid; */
+  box-shadow: 0px 0px 18px 4px #00000014;
+}
+
+.drawButton {
+  width: 87px;
+  height: 40px;
+  background: linear-gradient(99.11deg, #09F2B1 2.76%, #1AC4C4 87.01%);
+  border-radius: 100px;
+  border-style: none;
+  color: var(--mdc-theme-on-primary);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+#btn {
+  position: absolute;
+  top: 88%;
+  left: 53%;
+
+}
+
+#clr {
+  position: absolute;
+  top: 88%;
+  left: 23%;
 }
