--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -249,6 +249,12 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
 }
 
 .titletext h1 {
