--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -295,8 +295,7 @@ footer {
 }
 
 .card h3 {
-  font-family: Montserrat;
-  font-style: bold;
+  font-family: Montserrat-Bold;
   font-size: 1.2rem;
   color: #08f2b0;
   margin: 0;
