Changed links with added documents

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -66,13 +66,8 @@ a {
 }
 
 .container {
-  width: 100%;
   height: 100%;
-  /* text-align: center; */
-  /* margin: 0 auto; */
   display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
   flex-direction: column;
   overflow: hidden;
 
@@ -876,10 +871,10 @@ input[type="time"]::-webkit-calendar-picker-indicator {
   text-align: left;
 }
 
-.doodle-title>h1 {
+.doodle-title > h1 {
   font-weight: 700;
   font-size: 36px;
-  margin: 94px 0 26px 26px;
+  margin: 20px 0 26px 26px;
 }
 
 .drawing-container {
@@ -900,7 +895,7 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 .drawButton {
   width: 87px;
   height: 40px;
-  background: linear-gradient(99.11deg, #09F2B1 2.76%, #1AC4C4 87.01%);
+  background: linear-gradient(99.11deg, #09f2b1 2.76%, #1ac4c4 87.01%);
   border-radius: 100px;
   border-style: none;
   color: var(--mdc-theme-on-primary);
@@ -913,11 +908,317 @@ input[type="time"]::-webkit-calendar-picker-indicator {
   position: absolute;
   top: 88%;
   left: 53%;
-
 }
 
 #clr {
   position: absolute;
   top: 88%;
   left: 23%;
+}
+
+/* Code Wen */
+.arrow_back_ios {
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 24;
+  scale: 0.7;
+}
+
+.title_message {
+  position: fixed;
+  top: 94;
+  left: 24;
+}
+
+.message {
+  position: fixed;
+  top: 202;
+  left: 24;
+  right: 24;
+}
+
+.message h1 {
+  color: var(--mdc-theme-primary);
+  position: fixed;
+  top: 175;
+  left: 24;
+  font-weight: 700;
+  font-size: 16;
+  letter-spacing: -1.5%;
+}
+
+.add button {
+  position: fixed;
+  top: 278;
+  left: 235;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10 24;
+  gap: 10;
+  width: 132;
+  height: 40;
+  background: var(--mdc-theme-primary);
+  border: none;
+  border-radius: 100px;
+}
+
+.add button a {
+  text-decoration: none;
+  color: var(--colors-background-light);
+}
+
+.line {
+  position: fixed;
+  top: 329;
+  left: 24;
+  right: 24;
+  color: var(--mdc-text-field-icon);
+  border: 1px solid rgba(102, 106, 112, 0.1);
+  height: 0px;
+  width: auto;
+  width: 366;
+}
+
+.category_title {
+  position: fixed;
+  color: var(--mdc-theme-primary);
+  top: 350;
+  left: 24;
+  font-weight: 700;
+  font-size: 16;
+  letter-spacing: -1.5%;
+}
+
+.settings {
+  position: fixed;
+  color: var(--mdc-theme-primary);
+  top: 543;
+  left: 24px;
+  font-weight: 700;
+  font-size: 16;
+  letter-spacing: -1.5%;
+}
+
+.accept {
+  position: fixed;
+  color: var(--mdc-text-field-icon);
+  top: 700;
+  left: 24px;
+}
+
+.stay {
+  position: fixed;
+  color: var(--mdc-text-field-icon);
+  top: 740;
+  left: 24;
+}
+
+.form-switch {
+  display: inline-block;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  position: fixed;
+  top: 700;
+  left: 296;
+}
+
+.form-switch i {
+  position: relative;
+  display: inline-block;
+  margin-right: 0.5rem;
+  width: 46px;
+  height: 26px;
+  background-color: #e6e6e6;
+  border-radius: 23px;
+  vertical-align: text-bottom;
+  transition: all 0.3s linear;
+}
+
+.form-switch i::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 42px;
+  height: 22px;
+  background-color: #fff;
+  border-radius: 11px;
+  transform: translate3d(2px, 2px, 0) scale3d(1, 1, 1);
+  transition: all 0.25s linear;
+}
+
+.form-switch i::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 22px;
+  height: 22px;
+  background-color: #fff;
+  border-radius: 11px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24);
+  transform: translate3d(2px, 2px, 0);
+  transition: all 0.2s ease-in-out;
+}
+
+.form-switch:active i::after {
+  width: 28px;
+  transform: translate3d(2px, 2px, 0);
+}
+
+.form-switch:active input:checked + i::after {
+  transform: translate3d(16px, 2px, 0);
+}
+
+.form-switch input {
+  display: none;
+}
+
+.form-switch input:checked + i {
+  background-color: var(--mdc-theme-primary);
+}
+
+.form-switch input:checked + i::before {
+  transform: translate3d(18px, 2px, 0) scale3d(0, 0, 0);
+}
+
+.form-switch input:checked + i::after {
+  transform: translate3d(22px, 2px, 0);
+}
+
+.form-switch2 {
+  display: inline-block;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  position: fixed;
+  top: 740;
+  left: 296;
+}
+
+.form-switch2 i {
+  position: relative;
+  display: inline-block;
+  margin-right: 0.5rem;
+  width: 46px;
+  height: 26px;
+  background-color: #e6e6e6;
+  border-radius: 23px;
+  vertical-align: text-bottom;
+  transition: all 0.3s linear;
+}
+
+.form-switch2 i::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 42px;
+  height: 22px;
+  background-color: #fff;
+  border-radius: 11px;
+  transform: translate3d(2px, 2px, 0) scale3d(1, 1, 1);
+  transition: all 0.25s linear;
+}
+
+.form-switch2 i::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 22px;
+  height: 22px;
+  background-color: #fff;
+  border-radius: 11px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24);
+  transform: translate3d(2px, 2px, 0);
+  transition: all 0.2s ease-in-out;
+}
+
+.form-switch2:active i::after {
+  width: 28px;
+  transform: translate3d(2px, 2px, 0);
+}
+
+.form-switch2:active input:checked + i::after {
+  transform: translate3d(16px, 2px, 0);
+}
+
+.form-switch2 input {
+  display: none;
+}
+
+.form-switch2 input:checked + i {
+  background-color: var(--mdc-theme-primary);
+}
+
+.form-switch2 input:checked + i::before {
+  transform: translate3d(18px, 2px, 0) scale3d(0, 0, 0);
+}
+
+.form-switch2 input:checked + i::after {
+  transform: translate3d(22px, 2px, 0);
+}
+
+.send {
+  width: 414;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.send button {
+  position: fixed;
+  bottom: 0;
+  margin-bottom: 20;
+  height: 40;
+  width: 158;
+  background: linear-gradient(
+    90deg,
+    var(--mdc-theme-primary),
+    var(--mdc-theme-surface)
+  );
+  border: none;
+  border-radius: 100px;
+  padding: 5px;
+}
+
+.send button a {
+  text-decoration: none;
+  color: var(--colors-background-light);
+}
+
+.thumb {
+  position: fixed;
+  width: 100%;
+}
+
+.thumb img {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.thanks {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.thanks h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--mdc-theme-primary);
+}
+
+.confirm {
+  text-align: center;
+  color: var(--mdc-text-field-icon);
+}
+
+.confirmation {
+  position: fixed;
+  top: 200;
+  left: 0;
+  width: 100%;
 }
